--- a/style.css
+++ b/style.css
@@ -1,5 +1,151 @@
+@import url('https://fonts.googleapis.com/css2?family=Orbitron&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
+
 *{
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    background-color: #24252A;
+    color: white;
 }
+
+
+
+
+
+.heading{
+    color: rgb(255, 246, 127);
+    font-family: 'VT323', monospace;
+    font-size: 7vw;
+    text-align: center;
+}
+
+header{
+    padding: 27px;
+}
+
+.buttons{
+    display: flex;
+    justify-content: space-evenly;
+    gap: 10px;
+}
+
+.btn{
+    border: 1px solid #24252A;
+    transition-duration: 0.4s;
+    padding: 50px;
+    cursor: pointer;
+    /* font-size: 100px; */
+}
+
+.btn:hover{
+    transform: scale(1.1);
+    border-radius: 50%;
+}
+
+@media screen and (min-width: 601px) {
+    .btn {
+      font-size: 10vw;
+    }
+  }
+  
+  @media screen and (max-width: 600px) {
+    .btn {
+      font-size: 15vw;
+    }
+}
+
+.score-container{
+    display: flex;
+    justify-content: space-around;
+    font-family: 'VT323', monospace;
+    font-size: 4vw;
+}
+
+#status{
+    text-align: center;
+    margin-top: 30px;
+    font-family: 'VT323', monospace;
+    font-style: italic;
+    font-size: 4vw;
+}
+
+.lose{
+    color: rgb(197, 35, 35);
+}
+
+.win{
+    color: rgb(62, 207, 69);
+}
+
+.draw{
+    color: rgb(252, 174, 58);
+}
+
+.hide{
+    display: none;
+}
+
+.win-container{
+    margin-top: 6vh;
+    font-family: 'VT323', monospace;
+    font-size: 5vw;
+    display: flex;
+    gap: 8px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#reset{
+    font-family: 'VT323', monospace;
+    padding: 20px;
+    transition-duration: 0.4s;
+    background-color: white;
+    border-radius: 20px;
+    border: 2px solid #24252A; 
+    color: black;
+    cursor: pointer;
+    font-size: 2vw;
+}
+
+#reset:hover{
+    background-color: #4CAF50;
+    color: white;
+}
+
+#round-winner{
+    animation: color-change 1s infinite;
+  }
+  
+@keyframes color-change {
+    0% { color: red; }
+    50% { color: blue; }
+    100% { color: red; }
+  }
+
+
+  .footer {
+    position: absolute;
+    font-family: 'VT323', monospace;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    width: 100%;
+    padding: 10px;
+    color: var(--primary-dark);
+    font-size: 20px;
+  }
+  
+  .fa-github {
+    color: var(--primary-dark);
+    font-size: 24px;
+    transition: transform 0.3s ease-in-out;
+  }
+  
+  .fa-github:hover {
+    transform: rotate(360deg) scale(1.2);
+  }
