--- a/style.css
+++ b/style.css
@@ -133,6 +133,7 @@ header{
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: -1;
     gap: 10px;
     width: 100%;
     padding: 10px;
