--- a/style.css
+++ b/style.css
@@ -144,9 +144,9 @@ header{
   .fa-github {
     color: var(--primary-dark);
     font-size: 24px;
-    transition: transform 0.3s ease-in-out;
+  }
+
+  a{
+      text-decoration: none;
   }
   
-  .fa-github:hover {
-    transform: rotate(360deg) scale(1.2);
-  }
